--- a/laboratoir/src/componentrs/journées/inscription/insscrip.css
+++ b/laboratoir/src/componentrs/journées/inscription/insscrip.css
@@ -16,7 +16,7 @@
   
   .tittle {
     font-size: 1.2rem;
-   color: rgb(214, 47, 103);
+   color: var(--title);
     text-align: center;
     font-weight: bold;
  
