--- a/laboratoir/src/index.css
+++ b/laboratoir/src/index.css
@@ -1,14 +1,18 @@
 
   
   @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap');
- 
+  
+  @import 'bootstrap/dist/css/bootstrap.min.css';
   :root {
-    --container-padding: 4.8rem;
-    --title:  rgb(199, 20, 104);
+    --container-padding: 0;
+    --title:  rgb(17, 7, 155);
     --sub-title: rgb(32, 32, 32);
   } 
   
-
+  body{
+    background-color: rgb(255, 255, 255);
+    
+  }
 
   *{
     font-family: 'Open Sans', sans-serif;
@@ -31,15 +35,16 @@
   button{
     all: unset;
   }
-  .container {
-    border: 2px solid  rgba(63, 63, 70, 0.4);
-    width: 90%;
+  /* .container {
+    border: 1px solid  rgba(235, 235, 245, 0.4);
+    width: 120%;
     margin-left: auto;
-    margin-right: auto; 
-    background-color: #fff;
-    padding: 0 var(--container-padding); 
+    margin-right: auto;  
+    background-color: rgb(255, 255, 255);
+     padding: 0 ; 
+     margin: 1rem; 
   }
-  
+   */
 
   .divider {
     border-bottom: 1px solid rgba(63, 63, 70, 0.2);
