--- a/laboratoir/src/componentrs/acceuil/acceuil.css
+++ b/laboratoir/src/componentrs/acceuil/acceuil.css
@@ -1,3 +1,20 @@
+
+.carousel{
+  padding-bottom: 5rem;
+  margin: 3rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 .top-section{
   margin: 0;
   position: relative;
