--- a/laboratoir/src/componentrs/footer/footer.css
+++ b/laboratoir/src/componentrs/footer/footer.css
@@ -2,7 +2,10 @@
 footer.flex{
     justify-content:space-between;
       padding-bottom: 0.5rem;
-  
+      height: 50px;
+      /* border-radius: 30px; */
+      padding-bottom: 0.8rem;
+      text-align: center;
     }
     
   
@@ -12,6 +15,7 @@ footer.flex{
     
     footer.flex p{
       color: rgb(113 113 122);
+      font-size: 0.7rem;
     }
     
     
